--- a/data/circle.html
+++ b/data/circle.html
@@ -22,7 +22,7 @@
             </li>
             <li>
                 <a href="tools.html">
-                    <span class="label"> 基础道具</span>
+                    <span class="label">基础道具</span>
                 </a>
             </li>
             <li>
@@ -50,11 +50,17 @@
     <div class="content">
         <p style='font-size: 2rem; width: 1000px; text-align: left; color: white' >
             首先要找好位置！比如T和R开头图的餐桌都可以溜。鬼有你视野情况下都会持续加速；没有视野情况下不会加速。<br><br><br>
-            1.非加速鬼：魂魄、梦魇、骚灵、赤鬼、幽灵、御灵、暗影、恶魔、妖怪、女妖、幻妖、魅影、幻影、鬼婴。孪魂、巨灵比较特殊速度，不算很快<br><br>
+            1. 非加速鬼：魂魄、梦魇、骚灵、赤鬼、幽灵、御灵、暗影、恶魔、妖怪、女妖、幻妖、魅影、幻影、鬼婴、雾影。孪魂、巨灵、雾影比较特殊速度，不算很快<br><br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在餐桌处蹲下，蹲下后鬼是没有你视野的。跟鬼把握距离，即使蹲下了也不要让鬼跟你保持在同一条道上。不加速鬼只要蹲下，保持好距离都不需要按加速。<br><br><br>
-            2.加速鬼：寒魔、亡魂、雷魂、(模仿这三类鬼的)拟魂<br><br>
+            2. 加速鬼：寒魔、亡魂、雷魂、(模仿这三类鬼的)拟魂<br><br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;操作跟溜非加速鬼差不多，只不过加速鬼是需要加速的，每次加速都需要在桌子的长度处按：每一圈只需要在桌子的一边长度上按一次加速，另一边不需要按步行过去即可。<br><br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;溜亡魂：如果你想玩刺激的可以不蹲下卡视野，亡魂速度直接就是满速度。寒魔：没有刺骨寒温的地方速度很慢(看鬼房在哪里)。拟魂：看模仿哪只加速鬼了。雷魂：基本上一个强光手电 就会把速度拉满。<br><br></p>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;亡魂：如果你想玩刺激的可以不蹲下卡视野，亡魂速度直接就是满速度。<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;寒魔：没有刺骨寒温的地方速度很慢(看鬼房在哪里)。<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;拟魂：看模仿哪只加速鬼了。<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;雷魂：基本上一个强光手电 就会把速度拉满。<br><br>
+            3. 特殊鬼：魔洛伊、刹耶<br><br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;如果是魔洛伊的目标在溜则按照速度鬼的方式溜，其他玩家则按照非速度鬼的方式溜。<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;如果是刹耶的第一波猎杀则按照速度鬼的方式溜，随着游戏时间的增加，刹耶的移速会逐渐减缓，此时就可以按照非速度鬼的方式溜了。<br><br></p>
         <img src="./images/circle1.png"/>
         <footer>
             <p>内容编辑：100大人</p>
