--- a/data/tools.html
+++ b/data/tools.html
@@ -22,7 +22,7 @@
             </li>
             <li>
                 <a href="tools.html">
-                    <span class="label"> 基础道具</span>
+                    <span class="label">基础道具</span>
                 </a>
             </li>
             <li>
@@ -64,7 +64,7 @@
                 b.style.display = (b.style.display === 'none')? 'block':'none'
             }
             spb('spb')" style="font-size: 2rem">通灵盒 Spirit Box</h3>
-                <p id="spb" style="display: none">在鬼房附近按V与鬼对话，回应你就是回复了。</p>
+                <p id="spb" style="display: none">在鬼房附近按V或B与鬼对话，回应你就是回复了(有声音并且屏幕下方的小鬼会亮)。</p>
             </li>
 
             <li>
@@ -145,7 +145,8 @@
                 k.style.display = (k.style.display === 'none')?'block':'none'
             }
             sensor('sensor')" style="font-size: 2rem">运动传感器与声音传感器 Motion Sensor&Sound Sensor</h3>
-                <p id="sensor" style="display: none">可选任务里。按F放在墙上，灯光亮起证明鬼靠近过传感器(灰黑色的是运动传感器，白色的是声音传感器)。</p>
+                <p id="sensor" style="display: none">可选任务里。按F将运动传感器放在墙上，灯光亮起证明鬼靠近过传感器。<br><br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;话筒是声音传感器，对于判定孪魂是个不错的道具。</p>
             </li>
 
             <li>
@@ -163,7 +164,7 @@
                 m.style.display = (m.style.display === 'none')?'block':'none'
             }
             mic('mic')" style="font-size: 2rem">收音器 Parabolic Microphone</h3>
-                <p id="mic" style="display: none">俗称大锅 可以接收鬼动的声音，鬼动了上面会有数值：小数点后面有数字代表着是鬼动了(大锅有很多BUG ：队友动也会有数值)。</p>
+                <p id="mic" style="display: none">俗称大锅，可以接收鬼动的声音，鬼动了上面会有数值：小数点后面有数字代表着是鬼动了(大锅有很多BUG ：队友动也会有数值)。</p>
             </li>
 
             <li>
