--- a/data/ghosts.html
+++ b/data/ghosts.html
@@ -22,7 +22,7 @@
         </li>
         <li>
             <a href="tools.html">
-                <span class="label"> 基础道具</span>
+                <span class="label">基础道具</span>
             </a>
         </li>
         <li>
@@ -56,7 +56,7 @@
                     t.style.display = (t.style.display === 'none')?'block':'none'
                 }
                 spi('spi')" style="font-size: 2rem">魂魄 spirit</h3>
-            <p id="spi" style="display: none">在魂魄没有猎杀的时候 在魂魄附近点燃圣木 魂魄会在三分钟内不开猎杀</p>
+            <p id="spi" style="display: none">在魂魄没有猎杀的时候，在魂魄附近点燃圣木，魂魄会在三分钟内不开猎杀。</p>
         </li>
         <li id="g2">
             <h3 id="wraith" onclick="function wra(wra) {
@@ -64,7 +64,7 @@
                     u.style.display = (u.style.display === 'none')?'block':'none'
                 }
                 wra('wra')"  style="font-size: 2rem">魅影 wraith</h3>
-            <p id="wra" style="display: none">在魅影房间撒盐 没有绿色足印 其次魅影的穿墙只是在没有猎杀的时候才会穿墙 可以理解为换鬼房</p>
+            <p id="wra" style="display: none">在魅影房间撒盐，没有绿色足印，其次魅影的穿墙只是在没有猎杀的时候才会穿墙，以理解为换鬼房。</p>
         </li>
 
         <li id="g3">
@@ -73,7 +73,7 @@
                     a.style.display = (a.style.display === 'none')? 'block':'none'
                 }
                 pha('pha')"  style="font-size: 2rem">幻影 phatom</h3>
-            <p id="pha" style="display: none"> 幻影在灵异事件现身时拍照 会消失 但是灵异事件声音不会消失 开猎杀时 幻影会隐身两秒 出现一秒 不容易被看到</p>
+            <p id="pha" style="display: none"> 幻影在灵异事件现身时拍照会消失，但是灵异事件声音不会消失。开猎杀时，幻影会隐身两秒出现一秒，不容易被看到。</p>
         </li>
 
         <li id="g4" >
@@ -82,7 +82,7 @@
                 b.style.display = (b.style.display === 'none')? 'block':'none'
             }
             pol('pol')" style="font-size: 2rem">骚灵 poltergeist</h3>
-            <p id="pol" style="display: none">骚灵是爱扔东西的鬼魂 可以同时扔很多东西 如果没有东西 骚灵也会开门进行少量互动</p>
+            <p id="pol" style="display: none">骚灵是爱扔东西的鬼魂，可以同时扔很多东西，如果没有东西，骚灵也会开门进行少量互动。</p>
         </li>
 
         <li id="g5" >
@@ -91,7 +91,10 @@
                 c.style.display = (c.style.display === 'none')?'block':'none'
             }
             ban('ban')" style="font-size: 2rem">女妖 banshee</h3>
-            <p id="ban" style="display: none">女妖开猎杀只会锁定一个人杀 假如说你是被锁定的人 你不出房间 不死 女妖永远不会换目标 但是你出房间了 或者是死了 女妖才会再换目标 也可以用喇叭 听见女妖的尖叫声 是女妖自带的 但是不一定会给你尖叫声音</p>
+            <p id="ban" style="display: none">女妖每次开猎杀只会锁定一个人杀，但是会有以下几种情况：<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1. 假如被锁定的玩家存活并且在房子内，女妖会一直追该名玩家，并且其他玩家并不会被女妖杀害。<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2. 假如被锁定的玩家已经牺牲或者不在房子内，女妖会开启无差别猎杀，所有玩家都会被女妖杀害。<br><br>
+                也可以用大锅听见女妖的尖叫声，这是女妖自带的，但是不一定会给你尖叫声音。</p>
         </li>
 
         <li id="g6">
@@ -100,7 +103,7 @@
                 d.style.display = (d.style.display === 'none')?'block':'none'
             }
             jin('jin')" style="font-size: 2rem">巨灵 jinn</h3>
-            <p id="jin" style="display: none">巨灵在开电闸的时候会有一个从远处跑的快 近距离不快的技能 这个技能小图基本可以无视掉 只要你会遛鬼（巨灵基本不会关电闸 但是有BUG几率关）</p>
+            <p id="jin" style="display: none">巨灵在开电闸的时候会有一个从远处跑的快，近距离不快的技能，这个技能小图基本可以无视掉，只要你会遛鬼(巨灵基本不会关电闸但是有BUG几率关)。</p>
         </li>
 
         <li id="g7">
@@ -109,7 +112,7 @@
                 e.style.display = (e.style.display === 'none')?'block':'none'
             }
             mare('mare_')" style="font-size: 2rem">梦魇 mare</h3>
-            <p id="mare_" style="display: none">梦魇会在平均团体理智60%左右会开猎杀 如果判断是梦魇 可以打开附近所有灯光 就会让梦魇平均在1分钟左右 再次开猎杀</p>
+            <p id="mare_" style="display: none">梦魇会在平均团体理智60%左右会开猎杀，如果判断是梦魇，可以打开附近所有灯光，这样就会让梦魇平均在1分钟左右再次开猎杀。</p>
         </li>
 
         <li id="g8">
@@ -118,7 +121,7 @@
                 f.style.display = (f.style.display === 'none')?'block':'none'
             }
             reve('reve')" style="font-size: 2rem">亡魂 revenant</h3>
-            <p id="reve" style="display: none">亡魂有你视野的情况下 速度是最快的 而且已经是上限了 不会再加速 没有你视野情况下 速度是所有鬼里面最慢的</p>
+            <p id="reve" style="display: none">亡魂视野里有人的情况下移速是最快的(大概是3秒左右开始加速)，而且已经是上限了不会再加速；视野里没人情况下速度是所有鬼里面最慢的。</p>
         </li>
 
         <li id="g9">
@@ -127,7 +130,7 @@
                 g.style.display = (g.style.display === 'none')?'block':'none'
             }
             shade('shade_')" style="font-size: 2rem">暗影 shade</h3>
-            <p id="shade_"  style="display: none">暗影是人多情况下 基本完全不会出现任何互动的 在有人的情况下会写鬼魂笔记 会踩盐 但是其他的不会给（暗影有BUG 即使是人多的情况下 也会给互动）</p>
+            <p id="shade_"  style="display: none">暗影是人多情况下基本完全不会出现任何互动的，在有人的情况下会写鬼魂笔记、会踩盐，但是其他的不会给(暗影有BUG：即使是人多的情况下也会给互动)。</p>
         </li>
 
         <li id="g10">
@@ -136,7 +139,8 @@
                 h.style.display = (h.style.display === 'none')?'block':'none'
             }
             dem('dem')" style="font-size: 2rem">恶魔 demon</h3>
-            <p id="dem" style="display: none">恶魔可以在90%就可以开启猎杀 平均会在60-70%理智之间开猎杀 如果团体理智为0 那么恶魔每次猎杀时间间隔会在30秒左右开始</p>
+            <p id="dem" style="display: none">恶魔可以在90%就可以开启猎杀，平均会在60-70%理智之间开猎杀。如果团体理智为0，那么恶魔每次猎杀时间间隔会在30秒左右开始。<br><br>
+                若恶魔处于十字架范围内，则会在所有十字架报废之后开启猎杀。</p>
         </li>
 
         <li id="g11">
@@ -144,8 +148,8 @@
                 var i = document.getElementById(yur)
                 i.style.display = (i.style.display === 'none')?'block':'none'
             }
-            yur('yur')" style="font-size: 2rem">幽灵 Yurei</h3>
-            <p id="yur" style="display: none">灵产生灵异事件或是互动 都会掉很多理智 但是只是比所有鬼产生的互动 灵异事件要掉多那么一点点 碰见幽灵可以用排除法</p>
+            yur('yur')" style="font-size: 2rem">幽灵 yurei</h3>
+            <p id="yur" style="display: none">幽灵产生灵异事件或是互动都会掉很多理智，但是只是比所有鬼产生的互动灵异事件要掉多那么一点点。碰见幽灵可以用排除法。</p>
         </li>
 
         <li id="g12">
@@ -154,7 +158,8 @@
                 j.style.display = (j.style.display === 'none')?'block':'none'
             }
             onii('onii')" style="font-size: 2rem">赤鬼 oni</h3>
-            <p id="onii" style="display: none">赤鬼是一个在人多情况下 非常爱现身的鬼 同时可以高速移动物品 如果碰上赤鬼 平均每场会出现三次或以上的灵异现身（要有队友全在的情况下）</p>
+            <p id="onii" style="display: none">赤鬼是一个在人多情况下非常爱现身的鬼，同时可以高速移动物品(与骚灵不同的是，赤鬼会对物品进行位移)。<br><br>
+                如果碰上赤鬼，平均每场会出现三次或以上的灵异现身(要队友全在的情况下)。</p>
         </li>
 
         <li id="g13">
@@ -163,7 +168,7 @@
                 k.style.display = (k.style.display === 'none')?'block':'none'
             }
             yok('yok')" style="font-size: 2rem">妖怪 yokai</h3>
-            <p id="yok" style="display: none">妖怪对声音非常敏感 直接按V B在附近说话 就可以激怒 同时妖怪是小龙虾 在溜妖怪的时候 妖怪会回头很多次 或者是直接走开</p>
+            <p id="yok" style="display: none">妖怪对声音非常敏感：直接按V或B在附近说话就可以激怒。同时妖怪是小龙(聋)虾(瞎)，在溜妖怪的时候妖怪会回头很多次，或者是直接走开。</p>
         </li>
 
         <li id="g14">
@@ -172,7 +177,8 @@
                 l.style.display = (l.style.display === 'none')?'block':'none'
             }
             han('han')" style="font-size: 2rem">寒魔 hantu</h3>
-            <p id="han" style="display: none">寒魔在刺骨寒温的地带速度比雷魂满电还要快 但是开了电闸 出了鬼房 寒魔就不快了 而且寒魔不需要卡视野 寒魔不在鬼房不会加速（噩梦难度 寒魔必须有刺骨寒温 不会被隐藏）</p>
+            <p id="han" style="display: none">寒魔在刺骨寒温的地带速度比雷魂满电还要快，但是开了电闸，出了鬼房，寒魔就不快了。<br><br>
+                而且寒魔不需要卡视野，寒魔不在鬼房不会加速(噩梦难度：寒魔必须有刺骨寒温，不会被隐藏)。</p>
         </li>
 
         <li id="g15">
@@ -181,7 +187,8 @@
                 m.style.display = (m.style.display === 'none')?'block':'none'
             }
             gor('gor')" style="font-size: 2rem">御灵 goryo</h3>
-            <p id="gor" style="display: none">御灵基本只会在鬼房 但是也会乱跑  （噩梦难度 御灵必须有点阵投影仪 不会被隐藏）御灵的点阵投影仪是只能用摄像机看到 直接肉眼看 是看不到的</p>
+            <p id="gor" style="display: none">御灵基本只会在鬼房，但是也会乱跑(噩梦难度：御灵必须有点阵投影仪，不会被隐藏)。<br><br>
+                御灵的点阵投影仪是只能用摄像机看到，直接肉眼看是看不到的，而且在附近的玩家太多也是不会出现点阵的。</p>
         </li>
 
         <li id="g16">
@@ -190,7 +197,7 @@
                 n.style.display = (n.style.display === 'none')?'block':'none'
             }
             myl('myl')" style="font-size: 2rem">鬼婴 myling</h3>
-            <p id="myl" style="display: none">鬼婴在猎杀时远的地方是听不到脚步声的 （注意离近了会有脚步声）</p>
+            <p id="myl" style="display: none">鬼婴在猎杀时远的地方是听不到脚步声的(注意离近了会有脚步声)。</p>
         </li>
 
         <li id="g17">
@@ -199,7 +206,7 @@
                     o.style.display = (o.style.display === 'none')?'block':'none'
                 }
                 onr('onr')" style="font-size: 2rem">怨灵 onryo</h3>
-            <p id="onr" style="display: none">在怨灵房间放蜡烛 怨灵不会开猎杀 而且只要蜡烛一直亮着 怨灵一直不开猎杀 （怨灵会有几率在蜡烛覆盖不到的地方开猎）（注意 在鬼房点完蜡烛 怨灵容易换鬼房）</p>
+            <p id="onr" style="display: none">在怨灵房间放蜡烛，怨灵不会开猎杀，而且只要蜡烛一直亮着，怨灵一直不开猎杀。如果点了蜡烛，怨灵会有一定几率在没有火的地方开猎杀。</p>
         </li>
 
         <li id="g18">
@@ -208,7 +215,7 @@
                     p.style.display = (p.style.display === 'none')?'block':'none'
                 }
                 twi('twi')" style="font-size: 2rem">孪魂 twins</h3>
-            <p id="twi" style="display: none">孪魂是双胞胎鬼 会同时或者差几秒钟产生互动 互动次数会很多 每次猎杀只会出现一只鬼 猎杀时第一波可能是弟弟 速度慢一点 第二波猎杀可能是哥哥 速度会快一点</p>
+            <p id="twi" style="display: none">孪魂是双胞胎鬼，会同时或者差几秒钟产生互动，互动次数会很多。每次猎杀只会出现一只鬼，猎杀时第一波可能是弟弟，速度慢一点；第二波猎杀可能是哥哥，速度会快一点。</p>
         </li>
 
         <li id="g19">
@@ -217,7 +224,7 @@
                     q.style.display = (q.style.display === 'none')?'block':'none'
                 }
                 rai('rai')" style="font-size: 2rem">雷魂 raiju</h3>
-            <p id="rai" style="display: none">雷魂开始猎杀速度很快 吸取附近电子设备是有上限的 只要不暴露视野 雷魂速度就会那么快 不会再加</p>
+            <p id="rai" style="display: none">雷魂猎杀时如果附近有电子设备则移速很快，如果脱离电子设备范围则降低移速。吸取附近电子设备是有上限的，只要不暴露视野，雷魂速度就会那么快不会再加。</p>
         </li>
 
         <li id="g20">
@@ -226,7 +233,7 @@
                     r.style.display = (r.style.display === 'none')?'block':'none'
                 }
                 oba('oba')" style="font-size: 2rem">幻妖 obake</h3>
-            <p id="oba" style="display: none">幻妖的指纹是有几率产生六指的 但是不一定会给 可以用排除法（噩梦难度 幻妖证据必有指纹）</p>
+            <p id="oba" style="display: none">幻妖的指纹是有几率产生六指的(噩梦难度：幻妖证据必有指纹)。</p>
         </li>
 
         <li id="g21">
@@ -235,7 +242,43 @@
                     s.style.display = (s.style.display === 'none')?'block':'none'
                 }
                 mim('mim')" style="font-size: 2rem">拟魂 mimic</h3>
-            <p id="mim" style="display: none">拟魂自带灵球（注意灵球是假的）专家难度会有四个证据 噩梦难度会有三个证据</p>
+            <p id="mim" style="display: none">拟魂自带灵球(注意灵球是假的！是特性！不是证据！)，专家难度会有四个证据，噩梦难度会有三个证据。<br><br>
+                拟魂每次猎杀会模仿不同的鬼，但是如果两次猎杀的间隔太短是不会变更的。<br><br>
+                拟魂模仿幻妖时也会出现六指。</p>
+        </li>
+
+        <li id="g22">
+            <h3 id="deogen" onclick="function deo(deo) {
+                    var s = document.getElementById(deo)
+                    s.style.display = (s.style.display === 'none')?'block':'none'
+                }
+                deo('deo')" style="font-size: 2rem">雾影 deogen</h3>
+            <p id="deo" style="display: none">雾影可以理解为是纯瞎子，但是又拥有透视(不可以躲柜子)，在猎杀时只会追随一个目标(距离最近优先)：<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;雾影的视野并非360°，也就是说只有直线视野。<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;如果目标不在雾影的视野里则会一直处于加速状态(与满电雷魂差不多)。<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;如果目标在雾影的视野里则会一直处于减速状态(比无视野亡魂略慢)。<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;如果目标脱离雾影视野且另一名玩家距离雾影足够近(尽量不要尝试)或者点燃圣木可以使雾影更换目标。</p>
+        </li>
+
+        <li id="g23">
+            <h3 id="moroi" onclick="function mor(mor) {
+                    var s = document.getElementById(mor)
+                    s.style.display = (s.style.display === 'none')?'block':'none'
+                }
+                mor('mor')" style="font-size: 2rem">魔洛伊 moroi</h3>
+            <p id="mor" style="display: none">魔洛伊在猎杀时的移速与受诅咒目标理智成反比。<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;若一名玩家使用通灵盒并且有回应则会成为魔洛伊的诅咒目标(该名玩家的理智会急速下降)。<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;若需要结束诅咒只需要使用理智药，之后下一名使用通灵盒并且有回应的玩家会成为新的诅咒目标。</p>
+        </li>
+
+        <li id="g24">
+            <h3 id="thaye" onclick="function tha(tha) {
+                    var s = document.getElementById(tha)
+                    s.style.display = (s.style.display === 'none')?'block':'none'
+                }
+                tha('tha')" style="font-size: 2rem">沙耶 thaye</h3>
+            <p id="tha" style="display: none">沙耶猎杀时的移速和猎杀频率与游戏时间成反比。<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;随着游戏时间的增加沙耶的猎杀频率从恶魔逐渐下降到暗影；猎杀时移速从满电雷魂逐渐下降到无视野亡魂。</p>
         </li>
     </ul>
     <footer>
